--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
     <!---Home-->
     <div class="home row">
-    <div class="bio col-5">
+    <div class="bio col-lg-5 col-md-12">
         <h1><a id="Home">Hello, I'm Ashley!</a></h1>
         <p>I am a journalist recently graduated from the University of Pennsylvania with interest reporting on a range of topics including health and science, East Asia, and breaking news. As an incoming computer science master's student at Columbia University, I am excited to learn how code can enhance digital journalism and the way we report and present stories online. You can view my work in CNN, The Philadelphia Inquirer, and The Daily Pennsylvanian.</p>
         <div class="social-media row justify-content-center">
@@ -34,7 +34,7 @@
             <a href="https://github.com/ashleyjuneahn" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
-    <div class="headshot col-7">
+    <div class="headshot col-lg-7 col-md-12">
         <img class="headshot" src="imgs/headshot.jpg" alt="headshot">
     </div>
     </div>
