--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card img-fluid">
-                <img class="card-img-top" src="imgs/newspaper2.jpeg">
+                <img class="card-img-top" src="imgs/philly-inquirer-yong-kim">
                 <div class="card-body card-img-overlay align-items-center d-flex justify-content-center">
                     <h4 class="card-title"><a href="https://www.inquirer.com/health/coronavirus/philadelphia-medical-students-pandemic-career-decision-20210622.html" target="_blank">Students studying medicine grapple with career path amid pandemic: 'Did I make the right decision?'</a></h4>
+                    <p class="card-creds" justify-content-left">Yong Kim/The Philadelphia Inquirer</p>
                     <img class="card-logo" src="imgs/phillyinquirerlogo.jpg">
                 </div>
             </div>
