--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 
     <!---Navigation bar-->
     <nav class="navbar navbar-expand-md">
-    <div class="container pt-4 justify-content-end">
-        <ul class="navbar-nav">
-            <li class="navbar-item"><a href="#Home">Home</a></li>
-            <li class="navbar-item"><a href="#NewsWriting">News Writing</a></li>
-            <li class="navbar-item"><a href="#Columns">Columns</a></li>
-        </ul>
-    </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
+            <span class="navbar-toggler-icon navbar-dark ml-auto"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
+            <ul class="navbar-nav">
+                <li class="navbar-item active"><a href="#Home">Home</a></li>
+                <li class="navbar-item"><a href="#NewsWriting">News Writing</a></li>
+                <li class="navbar-item"><a href="#Columns">Columns</a></li>
+                <li class="navbar-item"><a href="#Code">Code</a></li>
+            </ul>
+        </div>
     </nav>
 </head>
 
