--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
         </div>
         </div>
-        !---Second row---!
+        <!---Second row---!>
         <div class="writingrow row">
         <div class="col-lg-4 col-md-6">
             <div class="card img-fluid">
