add code section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
         </div>
         </div>
-        <!---Second row---!>
+        <!---Second row-->
         <div class="writingrow row">
         <div class="col-lg-4 col-md-6">
             <div class="card img-fluid">
@@ -196,8 +196,22 @@
     </div>
 
     <!---Code-->
-
-
+    <div class="writing container-fluid padding">
+        <h3><a id="Code">Code</a></h3>
+        <div class="gif">
+            <video loop autoplay muted>
+                <source src="videos/5ds.mov">
+            </video>
+            <p>A scrolly-telling implementation presenting five strategies of bystander intervention, known as the "5 D's". Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
+        </div>
+        <br><br><br><br>
+        <div class="gif">
+            <video loop autoplay muted>
+                <source src="videos/mapbox.mov">
+            </video>
+            <p>A <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> implementation presenting the percent increase in anti-Asian hate crimes from 2019 to 2020 in major cities. Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet">
