--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li class="navbar-item active"><a href="#Home">Home</a></li>
                 <li class="navbar-item"><a href="#NewsWriting">News Writing</a></li>
                 <li class="navbar-item"><a href="#Columns">Columns</a></li>
+                <li class="navbar-item"><a href="#Code">Code</a></li>
             </ul>
         </div>
     </nav>
