--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
     <div class="writing container-fluid padding">
         <h3><a id="Code">Code</a></h3>
         <div class="gif">
-            <video loop autoplay muted>
+            <video loop autoplay muted playsinline>
                 <source src="videos/5ds.mov">
             </video>
             <p>A scrolly-telling implementation presenting five strategies of bystander intervention, known as the "5 D's". Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
         </div>
         <br><br><br><br><br>
         <div class="gif">
-            <video loop autoplay muted>
+            <video loop autoplay muted playsinline>
                 <source src="videos/mapbox.mov">
             </video>
             <p>A <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> implementation presenting the percent increase in anti-Asian hate crimes from 2019 to 2020 in major cities. Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
