--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <body>
     <!---Home-->
-    <div class="homerow">
+    <div class="home row">
     <div class="bio col-lg-5 col-md-12">
         <h1><a id="Home">Hello, I'm Ashley!</a></h1>
-        <p>I am a journalist recently graduated from the University of Pennsylvania interested in reporting on a range of topics including health and science, East Asia, and breaking news. As an incoming computer science master's student at Columbia University, I am excited to learn how code can enhance digital journalism and the way we report and present stories online. You can view my work for CNN, USA TODAY, The Philadelphia Inquirer, and The Daily Pennsylvanian below.</p>
+        <p>I am a journalist recently graduated from the University of Pennsylvania interested in reporting on a range of topics including health and science, East Asia, and breaking news. As an incoming computer science master's student at Columbia University, I am excited to learn how code can enhance digital journalism and the way we report and present stories online. You can view my work for CNN, The Philadelphia Inquirer, and The Daily Pennsylvanian.</p>
         <div class="social-media row justify-content-center">
             <a href="https://twitter.com/ashleyahn88" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/ashley-ahn-50291b16b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
@@ -41,7 +41,7 @@
         <img class="headshot" src="imgs/headshot.jpg" alt="headshot">
     </div>
     </div>
-
+      
     <!---News Writing-->
     <div class="writing container-fluid padding">
         <h3><a id="NewsWriting">News Writing</a></h3>
