--- a/index.html
+++ b/index.html
@@ -212,6 +212,8 @@
             </video>
             <p>A <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> implementation presenting the percent increase in anti-Asian hate crimes from 2019 to 2020 in major cities. Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
         </div>
+        <br><br><br><br>
+        <p class="more">Check out my <a href="https://github.com/ashleyjuneahn" target="_blank">GitHub</a> for other projects on data analytics.</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
