Adding to coding portfolio

--- a/index.html
+++ b/index.html
@@ -225,12 +225,26 @@
             </video>
             <p>A scrolly-telling implementation presenting five strategies of bystander intervention, known as the "5 D's". Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
         </div>
-        <br><br><br><br><br>
+        <br><br><br><br>
         <div class="gif">
-            <video loop autoplay muted playsinline>
-                <source src="videos/mapbox.mov">
+            <video loop autoplay muted>
+                <source src="videos/bar graphs.mov">
             </video>
-            <p>A <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> implementation presenting the percent increase in anti-Asian hate crimes from 2019 to 2020 in major cities. Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
+            <p>A <a href="https://www.chartjs.org/" target="_blank">Chart.js</a> implementation showing the locations of anti-Asian hate crimes in 2019 and 2020. Notably, there was a 550% and 500% increase in anti-Asian attacks at conveience stores and grocery/supermarkets, respectively. Numbers are based on an analysis of the FBI's Hate Crime Statistics <a href="https://crime-data-explorer.fr.cloud.gov/pages/downloads#datasets">dataset</a>. Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
+        </div>
+        <br><br><br><br>
+        <div class="gif">
+            <video loop autoplay muted>
+                <source src="videos/line graph.mov">
+            </video>
+            <p>A <a href="https://www.chartjs.org/" target="_blank">Chart.js</a> implementation showing the number of anti-Asian hate crimes from 1991 to 2020. Numbers are based on an analysis of the FBI's Hate Crime Statistics <a href="https://crime-data-explorer.fr.cloud.gov/pages/downloads#datasets">dataset</a>. Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
+        </div>
+        <br><br><br><br>
+        <div class="gif">
+            <video loop autoplay muted>
+                <source src="videos/map.mov">
+            </video>
+            <p>A <a href="https://www.datawrapper.de/" target="_blank">Datawrapper</a> implementation showing the states where anti-Asian hate crimes stayed the same or increased in 2020 from the previous year. Numbers are based on an analysis of the FBI's Hate Crime Statistics <a href="https://crime-data-explorer.fr.cloud.gov/pages/downloads#datasets">dataset</a>. Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
         </div>
         <br><br><br><br>
         <p class="more">Check out my <a href="https://github.com/ashleyjuneahn" target="_blank">GitHub</a> for other projects on data analytics.</p>
