--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="home row">
     <div class="bio col-lg-5 col-md-12">
         <h1><a id="Home">Hello, I'm Ashley!</a></h1>
-        <p>I am a journalist recently graduated from the University of Pennsylvania and currently reporting for NPR's digital news desk. You can view my work for CNN, USA TODAY, The Philadelphia Inquirer, and The Daily Pennsylvanian below.</p>
+        <p>I am a journalist recently graduated from the University of Pennsylvania and currently reporting for <a href="https://www.npr.org/people/1128891742/ashley-ahn" target="_blank">NPR's digital news desk</a>. You can view my work for CNN, USA TODAY, The Philadelphia Inquirer, and The Daily Pennsylvanian below.</p>
         <div class="social-media row justify-content-center">
             <a href="https://twitter.com/ashleyahn88" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/ashley-ahn-50291b16b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
