--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="navbar-item active"><a href="#Home">Home</a></li>
                 <li class="navbar-item"><a href="#NewsWriting">News Writing</a></li>
                 <li class="navbar-item"><a href="#Columns">Columns</a></li>
-                <li class="navbar-item"><a href="#Graphics">Code</a></li>
+                <li class="navbar-item"><a href="#Graphics">Graphics</a></li>
             </ul>
         </div>
     </nav>
@@ -228,7 +228,7 @@
 
     <!---Graphics-->
     <div class="writing container-fluid padding">
-        <h3><a id="Code">Code</a></h3>
+        <h3><a id="Graphics">Graphics</a></h3>
         <div class="gif">
             <video loop autoplay muted>
                 <source src="videos/bar graphs.mov">
