added lebron graphic

--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
     <div class="writing container-fluid padding">
         <h3><a id="Graphics">Graphics</a></h3>
         <div class="gif">
+            <img src="imgs/lebron-points.jpeg">
+            <p>A Datawrapper chart showing the top 10 all-time NBA scorers' cumulative points scored by age. Click <a href="https://github.com/ashleyjuneahn/lebron-james-points" target="_blank">here</a> to see how the data was wrangled and <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
+        </div>
+        <br><br><br><br>
+        <div class="gif">
             <video loop autoplay muted>
                 <source src="videos/bar graphs.mov">
             </video>
@@ -241,13 +246,6 @@
                 <source src="videos/line graph.mov">
             </video>
             <p>A <a href="https://www.chartjs.org/" target="_blank">Chart.js</a> implementation showing the number of anti-Asian hate crimes from 1991 to 2020. Numbers are based on an analysis of the FBI's Hate Crime Statistics <a href="https://crime-data-explorer.fr.cloud.gov/pages/downloads#datasets">dataset</a>. Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
-        </div>
-        <br><br><br><br>
-        <div class="gif">
-            <video loop autoplay muted playsinline>
-                <source src="videos/5ds.mov">
-            </video>
-            <p>A scrolly-telling implementation presenting five strategies of bystander intervention, known as the "5 D's". Click <a href="https://ashleyjuneahn.github.io/anti-asian-crime-bystander/" target="_blank">here</a> to see the full article.</p>
         </div>
         <br><br><br><br>
         <p class="more">Check out my <a href="https://github.com/ashleyjuneahn" target="_blank">GitHub</a> for other projects on data analytics.</p>
