--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     <!---Graphics-->
     <div class="writing container-fluid padding">
         <h3><a id="Graphics">Graphics</a></h3>
+        <div class="writingrow row">
         <div class="col-lg-4 col-md-6">
             <div class="card img-fluid">
                 <img class="card-img-top" src="imgs/trump-desantis-chart.jpeg">
@@ -257,7 +258,8 @@
                 </div>
             </div>
         </div>                                                                  
-        </div>            
+        </div> 
+        </div>                                                                  
         <br><br><br><br>
         <p class="more">Check out my <a href="https://github.com/ashleyjuneahn" target="_blank">GitHub</a> for other projects on data analytics.</p>
     </div>
