--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="home row">
     <div class="bio col-lg-5 col-md-12">
         <h1><a id="Home">Hello, I'm Ashley!</a></h1>
-        <p>I am a reporting fellow for <a href="https://www.latimes.com/people/ashley-ahn">The Los Angeles Times</a>. You can view my previous work for NPR, CNN, USA TODAY, and Foreign Policy Magazine below.</p>
+        <p>I am a reporting fellow for <a href="https://www.latimes.com/people/ashley-ahn" target="_blank">The Los Angeles Times</a>. You can view my previous work for NPR, CNN, USA TODAY, and Foreign Policy Magazine below.</p>
         <div class="social-media row justify-content-center">
             <a href="https://twitter.com/ashleyahn88" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/ashley-ahn-50291b16b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
