--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h4 class="card-title"><a href="https://www.latimes.com/california/story/2023-11-16/10-freeway-fire-shutdown-causes-traffic-pollution-boyle-heights" target="_blank">‘You can smell the pollution’: 10 Freeway closure brings traffic, fumes, anger for residents
                         </a></h4>
                         <p class="card-creds justify-content-left">Gina Ferazzi/Los Angeles Times</p>
-                        <img class="card-logo mt-auto" src="imgs/la-logo.webp">
+                        <img class="card-logo mt-auto" src="imgs/latimes-logo.webp">
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                             <h4 class="card-title"><a href="https://www.latimes.com/california/story/2023-11-17/driving-in-traffic-is-stressful-more-commuters-are-trying-public-transit-after-fire-closes-10-freeway" target="_blank"> More commuters try public transit after fire closes 10 Freeway
                             </a></h4>
                             <p class="card-creds">Richard Vogel/AP</p>
-                            <img class="card-logo" src="imgs/la-logo.webp">
+                            <img class="card-logo" src="imgs/latimes-logo.webp">
                         </div>
                     </div>
             </div>
