--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </div>
         </div>
         <br><br><br>
-        <p class="more">Check out my <a href="https://github.com/ashleyjuneahn" target="_blank">GitHub</a> for other projects on data analytics.</p>
+        <p>Check out my <a href="https://github.com/ashleyjuneahn" target="_blank">GitHub</a> for other projects on data analytics.</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
