--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
             </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="card img-fluid">
-                        <img class="card-img-top" src="imgs/richard-vogel-metro.webp">
+                        <img class="card-img-top" src="imgs/fire-irfan-khan-lat.webp">
                         <div class="card-body card-img-overlay align-items-center d-flex justify-content-center mt-auto">
-                            <h4 class="card-title"><a href="https://www.latimes.com/california/story/2023-11-17/driving-in-traffic-is-stressful-more-commuters-are-trying-public-transit-after-fire-closes-10-freeway" target="_blank"> More commuters try public transit after fire closes 10 Freeway
+                            <h4 class="card-title"><a href="https://www.latimes.com/california/story/2023-12-02/south-los-angeles-fire-leaves-residents-homeless-for-holidays" target="_blank">Left homeless by massive L.A. fire, families face a Christmas of uncertainty and pain
                             </a></h4>
-                            <p class="card-creds">Richard Vogel/AP</p>
+                            <p class="card-creds">Irfan Khan/Los Angeles Times</p>
                             <img class="card-logo" src="imgs/latimes-logo.webp">
                         </div>
                     </div>
