--- a/index.html
+++ b/index.html
@@ -263,9 +263,8 @@
         </div>                                                                  
         </div>
         <br>
-        <div class="gfx">                                                                  
-                    <img class="card-img-top-gfx" src="imgs/nkorea-defectors-npr.png">                                                   
-        </div>
+        <img class="card-img-top-gfx" src="imgs/nkorea-defectors-npr.png">                                                   
+        <img class="card-img-top-gfx" src="imgs/vehicle_theft.png">
         </div>
         <br><br><br>
         <div class="bio">
