--- a/index.html
+++ b/index.html
@@ -263,8 +263,9 @@
         </div>                                                                  
         </div>
         <br>
-        <img class="card-img-top-gfx" src="imgs/nkorea-defectors-npr.png">                                                   
-        <img class="card-img-top-gfx" src="imgs/vehicle_theft.png">
+        <div class="gfx col-lg-5 col-md-12">
+          <img class="card-img-top-gfx" src="imgs/nkorea-defectors-npr.png">                                                   
+          <img class="card-img-top-gfx" src="imgs/vehicle_theft.png">
         </div>
         <br><br><br>
         <div class="bio">
