--- a/index.html
+++ b/index.html
@@ -263,8 +263,10 @@
         </div>                                                                  
         </div>
         <br>
-        <div class="gfx col-lg-5 col-md-12">
-          <img class="card-img-top-gfx" src="imgs/nkorea-defectors-npr.png">                                                   
+        <div class="gfx col-lg-7 col-md-12">
+          <img class="card-img-top-gfx" src="imgs/nkorea-defectors-npr.png">     
+        </div>
+        <div class="headshot col-lg-5 col-md-12">
           <img class="card-img-top-gfx" src="imgs/vehicle_theft.png">
         </div>
         <br><br><br>
