--- a/index.html
+++ b/index.html
@@ -263,11 +263,15 @@
         </div>                                                                  
         </div>
         <br>
-        <div class="col-lg-7 col-md-12">
+        <div class="col-lg-5 col-md-12">
+          <div class="card img-fluid">
           <img class="card-img-top-gfx" src="imgs/nkorea-defectors-npr.png">     
+          </div>
         </div>
         <div class="col-lg-5 col-md-12">
+          <div class="card img-fluid">
           <img class="card-img-top-gfx" src="imgs/vehicle_theft.png">
+          </div>
         </div>
         <br><br><br>
         <div class="bio">
