--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <h4 class="card-title"><a href="https://www.latimes.com/california/story/2024-05-01/inside-ucla-pro-palestinian-encampment-on-night-of-violence" target="_blank">Mace, green lasers, screeching soundtracks: Inside the UCLA encampment on a night of violence
                             </a></h4>
                             <p class="card-creds">Wally Skalij/Los Angeles Times</p>
-                            <img class="card-logo" src="imgs/latimes-logo.png">
+                            <img class="card-logo" src="imgs/latimes-logo.webp">
                         </div>
                     </div>
             </div>
