update headshot, AJC article

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="headshot col-lg-7 col-md-12">
-        <img class="headshot" src="imgs/headshot.jpg" alt="headshot">
+        <img class="headshot" src="imgs/headshot-portfolio.jpg" alt="headshot">
     </div>
     </div>
 
@@ -51,9 +51,9 @@
                 <div class="card img-fluid">
                     <img class="card-img-top" src="imgs/ucla-protest-lat.webp">
                     <div class="card-body card-img-overlay align-items-center d-flex justify-content-center">
-                        <h4 class="card-title"><a href="https://www.latimes.com/california/story/2024-05-11/ucla-chancellor-faces-faculty-criticism" target="_blank">UCLA chancellor faces growing faculty criticism, no-confidence vote, after weeks of turmoil
+                        <h4 class="card-title"><a href="https://www.ajc.com/news/atlanta-news/ice-makes-arrests-in-metro-atlanta-announces-targeted-operations-elsewhere/MXCCJQIQR5CIRPDIMCRPESFGNA/" target="_blank">ICE makes arrests in metro Atlanta, announces ‘targeted operations’ here and elsewhere
                         </a></h4>
-                        <p class="card-creds justify-content-left">Wally Skalij / Los Angeles Times</p>
+                        <p class="card-creds justify-content-left">Miguel Martinez / Atlanta Journal-Constitution</p>
                         <img class="card-logo mt-auto" src="imgs/latimes-logo.webp">
                     </div>
                 </div>
