--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         <div class="writingrow row">
           <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card img-fluid">
-                    <img class="card-img-top" src="imgs/ucla-protest-lat.webp">
+                    <img class="card-img-top" src="imgs/ajc-ice-arrests.avif">
                     <div class="card-body card-img-overlay align-items-center d-flex justify-content-center">
                         <h4 class="card-title"><a href="https://www.ajc.com/news/atlanta-news/ice-makes-arrests-in-metro-atlanta-announces-targeted-operations-elsewhere/MXCCJQIQR5CIRPDIMCRPESFGNA/" target="_blank">ICE makes arrests in metro Atlanta, announces ‘targeted operations’ here and elsewhere
                         </a></h4>
                         <p class="card-creds justify-content-left">Miguel Martinez / Atlanta Journal-Constitution</p>
-                        <img class="card-logo mt-auto" src="imgs/latimes-logo.webp">
+                        <img class="card-logo mt-auto" src="imgs/ajc-logo.png">
                     </div>
                 </div>
             </div>
