--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h4 class="card-title"><a href="https://www.ajc.com/news/atlanta-news/ice-makes-arrests-in-metro-atlanta-announces-targeted-operations-elsewhere/MXCCJQIQR5CIRPDIMCRPESFGNA/" target="_blank">ICE makes arrests in metro Atlanta, announces ‘targeted operations’ here and elsewhere
                         </a></h4>
                         <p class="card-creds justify-content-left">Miguel Martinez / Atlanta Journal-Constitution</p>
-                        <img class="card-logo mt-auto" src="imgs/ajc-logo.png">
+                        <img class="card-logo mt-auto" src="imgs/ajc-logo.webp">
                     </div>
                 </div>
             </div>
